[gd_scene load_steps=18 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/cf_run.res" type="Texture" id=2]
[ext_resource path="res://Assets/spark.png" type="Texture" id=3]
[ext_resource path="res://Sparks.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/cf_jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/cf_rise.png" type="Texture" id=6]
[ext_resource path="res://Assets/Stone03.ogg" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.64
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.2415, 28.2501 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 15.11
gravity = Vector3( 0, 400, 0 )
initial_velocity = 200.0
angular_velocity = 90.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
damping = 100.0

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 0.219608, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
trail_color_modifier = SubResource( 6 )
flag_disable_z = true
gravity = Vector3( -100, 0, 0 )
angular_velocity = 1.01391e-008
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 12.177, 39.4355 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13.4028, 13.0808 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 12.9431, 14.1534 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Run" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true
offset = Vector2( 0, -3.63 )
__meta__ = {
"_edit_lock_": true
}

[node name="Boost" type="Particles2D" parent="Run"]
visible = false
position = Vector2( -9.3281, 22.1238 )
rotation = -2.62766
z_index = -1
amount = 30
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="Sparks" parent="Run" instance=ExtResource( 4 )]
visible = false

[node name="SpeedTrail" type="Particles2D" parent="Run"]
visible = false
position = Vector2( -1, -3.63 )
z_index = -2
amount = 6
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Jump" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -17.7747 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpeedTrail" type="Particles2D" parent="Jump"]
visible = false
position = Vector2( -1, 0 )
z_index = -2
amount = 6
preprocess = 10.0
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 5 )

[node name="Rise" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -17.775 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpeedTrail" type="Particles2D" parent="Rise"]
visible = false
position = Vector2( -1, 0.000299454 )
z_index = -2
amount = 6
preprocess = 10.0
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 6 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpHurtbox" type="Area2D" parent="."]
editor/display_folded = true
visible = false
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHurtbox"]
position = Vector2( -0.153229, -8.88706 )
shape = SubResource( 8 )

[node name="RunHurtbox" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RunHurtbox"]
position = Vector2( 6.89513, -13.3306 )
shape = SubResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RunHurtbox"]
position = Vector2( -2.91129, 13.6371 )
shape = SubResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.6
autoplay = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="area_entered" from="JumpHurtbox" to="." method="_on_player_area_entered"]
[connection signal="area_entered" from="RunHurtbox" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="RunHurtbox" to="." method="_on_player_area_exited"]
